Перенес бизнес-логику (маппинг, хеширование паролей, управление ролями) из контроллеров в UserServiceImpl. Внедрил UserMapper на базе MapStruct для разделения сущностей и DTO, добавив @MappingTarget для оптимизации обновления данных. Реализовал идемпотентность метода removeUser через проверку existsById, что предотвращает выброс исключений при повторном удалении. Обновил DataInitializer для работы с UserDto, обеспечив единообразие логики создания пользователей. Оптимизировал AdminRestController, сделав его «тонким» (Thin Controller).